Salesforce/force-app/main/default/objects/PPI_Document_Category__mdt/PPI_Document_Category__mdt.object-meta.xml
<CustomObject>
    <label>PPI Document Category</label>
    <pluralLabel>PPI Document Categories</pluralLabel>
</CustomObject>