Salesforce/force-app/main/default/objects/PPI_Document_Category__mdt/fields/Class_Combination_Limited__c.field-meta.xml
<CustomField>
    <fullName>Class_Combination_Limited__c</fullName>
    <label>Class Combination Limited</label>
    <referenceTo>PPI_Work_Class_One_and_Two__mdt</referenceTo>
    <relationshipLabel>PPI Document Categories</relationshipLabel>
    <relationshipName>PPI_Document_Categories</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>