Salesforce/force-app/main/default/objects/PPI_Document_Category__mdt/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>PPI Document</label>
    <referenceTo>PPI_Document__mdt</referenceTo>
    <relationshipLabel>PPI Document Categories</relationshipLabel>
    <relationshipName>PPI_Document_Categories</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>