Salesforce/force-app/main/default/objects/PPI_Document_Category__mdt/fields/PPI_Work_Category__c.field-meta.xml
<CustomField>
    <fullName>PPI_Work_Category__c</fullName>
    <label>PPI Work Category</label>
    <referenceTo>PPI_Work_Category__mdt</referenceTo>
    <relationshipLabel>PPI Document Categories</relationshipLabel>
    <relationshipName>PPI_Document_Categories</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>