Salesforce/force-app/main/default/objects/PPI_Document_Category__mdt/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                    <default>true</default>
                    <label>Mandatory</label>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>